# aio-deribit

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/aio_deribit/: __init__.py  __meta__.py  base_client.py  exceptions.py
src/aio_deribit/api/: __init__.py  client.py  deribit.py  retort.py  urls.py
src/aio_deribit/api/http/: __init__.py  client.py  deribit.py  urls.py
src/aio_deribit/api/http/methods/: __init__.py  account_management.py  authentication.py  block_trade.py  combo_books.py  market_data.py  supporting.py  trading.py  wallet.py
src/aio_deribit/api/responses/: __init__.py  base.py
src/aio_deribit/api/responses/models/authentication/: __init__.py  auth.py
src/aio_deribit/api/responses/models/session_management/: __init__.py  cancel_on_disconnect.py
src/aio_deribit/api/responses/models/subscriptions/: __init__.py  deribit_price_index.py
src/aio_deribit/api/responses/models/supporting/: __init__.py  hello.py  status.py  test.py
src/aio_deribit/api/ws/: __init__.py  client.py  deribit.py  events.py  urls.py
src/aio_deribit/api/ws/methods/: __init__.py  account_management.py  authentication.py  block_trade.py  combo_books.py  market_data.py  session_management.py  subscription_management.py  supporting.py  trading.py  wallet.py
src/aio_deribit/clients/: __init__.py  http.py  ws.py
src/aio_deribit/tools/: __init__.py  builder.py  mapping.py  time_utils.py
src/aio_deribit/types/: __init__.py  auth_types.py  channels.py
tests/: conftest.py  test_ws_conn.py
tests/local_tests/: local_test.py
tests/mocks/: __init__.py  ws_server.py
