[project]
name = "aio-deribit"
version = "0.9.0"
description = "Deribit asynchronous python client with WS and HTTP support"
authors = [
    {name = "andrews-lerk", email = "lerk-inc@mail.ru"},
]
dependencies = [
    "aiohttp>=3.9.3",
    "certifi>=2024.2.2",
    "adaptix>=3.0.0b4",
    "websockets>=12.0",
    "mypy>=1.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true
