[project]
name = "aio-deribit"
version = "0.9.0"
description = "Deribit asynchronous python client with WS and HTTP support"
authors = [
    {name = "andrews-lerk", email = "lerk-inc@mail.ru"},
]
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.3",
    "adaptix>=3.0.0b4",
    "certifi>=2024.2.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.dev-dependencies]
test = [
    "uvloop>=0.19.0",
    "pytest>=8.2.1",
    "pytest-asyncio>=0.23.7",
]
lint = [
    "mypy>=1.9.0",
    "ruff>=0.4.2",
    "pre-commit>=3.7.0",
]


[tool.ruff]
line-length = 120
src = ["src"]
include = ["src/**.py", "tests/**.py"]

lint.select = [
    "ALL",
]

lint.ignore = [
    "D100", "D101", "D105", "D203", "D212", "D400", "D415",
    "ANN10",
    "FBT",
    "ISC001",
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = [
    "S101",
]


[tool.ruff.lint.mccabe]
max-complexity = 12


[tool.ruff.lint.pylint]
max-args = 15
max-returns = 8


[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
no-lines-before = ["local-folder"]


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"


[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
quote-style = "double"


[tool.mypy]
packages = ["src", "tests"]

strict = true
pretty = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
allow_untyped_calls = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
allow_redefinition = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.pdm]
distribution=true
